Render the space between temperature and the degree sign properly.

--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -16,7 +16,7 @@
 \vs p058 2:3 And yet some of the less imaginative of your mortal mechanists insist on viewing material creation and human evolution as an accident. The Urantia midwayers have assembled over 50,000 facts of physics and chemistry which they deem to be incompatible with the laws of accidental chance, and which they contend unmistakably demonstrate the presence of intelligent purpose in the material creation. And all of this takes no account of their catalogue of more than 100,000 findings outside the domain of physics and chemistry which they maintain prove the presence of mind in the planning, creation, and maintenance of the material cosmos.
 \vs p058 2:4 Your sun pours forth a veritable flood of death\hyp{}dealing rays, and your pleasant life on Urantia is due to the “fortuitous” influence of more than two\hyp{}score apparently accidental protective operations similar to the action of this unique ozone layer.
 \vs p058 2:5 Were it not for the “blanketing” effect of the atmosphere at night, heat would be lost by radiation so rapidly that life would be impossible of maintenance except by artificial provision.
-\vs p058 2:6 \pc The lower 8 or 10\,km of the earth’s atmosphere is the troposphere; this is the region of winds and air currents which provide weather phenomena. Above this region is the inner ionosphere and next above is the stratosphere. Ascending from the surface of the earth, the temperature steadily falls for 9 or 12\,km, at which height it registers around \mbox{-57°\,C}. This temperature range of from \mbox{-54°\,C} to \mbox{-57°\,C} is unchanged in the further ascent for 64 km; this realm of constant temperature is the stratosphere. At a height of 72 or 80\,km, the temperature begins to rise, and this increase continues until, at the level of the auroral displays, a temperature of 649°\,C. is attained, and it is this intense heat that ionizes the oxygen. But temperature in such a rarefied atmosphere is hardly comparable with heat reckoning at the surface of the earth. Bear in mind that 50\% of all your atmosphere is to be found in the first 5\,km. The height of the earth’s atmosphere is indicated by the highest auroral streamers --- about 643\,km.
+\vs p058 2:6 \pc The lower 8 or 10\,km of the earth’s atmosphere is the troposphere; this is the region of winds and air currents which provide weather phenomena. Above this region is the inner ionosphere and next above is the stratosphere. Ascending from the surface of the earth, the temperature steadily falls for 9 or 12\,km, at which height it registers around -57\,°C. This temperature range of from -54\,°C to -57\,°C is unchanged in the further ascent for 64 km; this realm of constant temperature is the stratosphere. At a height of 72 or 80\,km, the temperature begins to rise, and this increase continues until, at the level of the auroral displays, a temperature of 649\,°C is attained, and it is this intense heat that ionizes the oxygen. But temperature in such a rarefied atmosphere is hardly comparable with heat reckoning at the surface of the earth. Bear in mind that 50\% of all your atmosphere is to be found in the first 5\,km. The height of the earth’s atmosphere is indicated by the highest auroral streamers --- about 643\,km.
 \vs p058 2:7 Auroral phenomena are directly related to sunspots, those solar cyclones which whirl in opposite directions above and below the solar equator, even as do the terrestrial tropical hurricanes. Such atmospheric disturbances whirl in opposite directions when occurring above or below the equator.
 \vs p058 2:8 The power of sunspots to alter light frequencies shows that these solar storm centres function as enormous magnets. Such magnetic fields are able to hurl charged particles from the sunspot craters out through space to the earth’s outer atmosphere, where their ionizing influence produces such spectacular auroral displays. Therefore do you have the greatest auroral phenomena when sunspots are at their height --- or soon thereafter --- at which time the spots are more generally equatorially situated.
 \vs p058 2:9 Even the compass needle is responsive to this solar influence since it turns slightly to the east as the sun rises and slightly to the west as the sun nears setting. This happens every day, but during the height of sunspot cycles this variation of the compass is twice as great. These diurnal wanderings of the compass are in response to the increased ionization of the upper atmosphere, which is produced by the sunlight.
