--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -10,7 +10,7 @@
 \vs p124 1:6 \pc In the latter part of June, Jesus, in company with his father, first climbed to the summit of Mount Tabor. It was a clear day and the view was superb. It seemed to this nine\hyp{}year\hyp{}old lad that he had really gazed upon the entire world excepting India, Africa, and Rome.
 \vs p124 1:7 \pc Jesus’ second sister, Martha, was born Thursday night, September 13. Three weeks after the coming of Martha, Joseph, who was home for awhile, started the building of an addition to their house, a combined workshop and bedroom. A small workbench was built for Jesus, and for the first time he possessed tools of his own. At odd times for many years he worked at this bench and became highly expert in the making of yokes.
 \vs p124 1:8 \pc This winter and the next were the coldest in Nazareth for many decades. Jesus had seen snow on the mountains, and several times it had fallen in Nazareth, remaining on the ground only a short time; but not until this winter had he seen ice. The fact that water could be had as a solid, a liquid, and a vapour --- he had long pondered over the escaping steam from the boiling pots --- caused the lad to think a great deal about the physical world and its constitution; and yet the personality embodied in this growing youth was all this while the actual creator and organizer of all these things throughout a far\hyp{}flung universe.
-\vs p124 1:9 The climate of Nazareth was not severe. January was the coldest month, the temperature averaging around 10°\,C. During July and August, the hottest months, the temperature would vary from 24° to 32°\,C. From the mountains to the Jordan and the Dead Sea valley the climate of Palestine ranged from the frigid to the torrid. And so, in a way, the Jews were prepared to live in about any and all of the world’s varying climates.
+\vs p124 1:9 The climate of Nazareth was not severe. January was the coldest month, the temperature averaging around 10\,°C. During July and August, the hottest months, the temperature would vary from 24\,°C to 32\,°C. From the mountains to the Jordan and the Dead Sea valley the climate of Palestine ranged from the frigid to the torrid. And so, in a way, the Jews were prepared to live in about any and all of the world’s varying climates.
 \vs p124 1:10 Even during the warmest summer months a cool sea breeze usually blew from the west from 10:00 until about 22:00. But every now and then terrific hot winds from the eastern desert would blow across all Palestine. These hot blasts usually came in February and March, near the end of the rainy season. In those days the rain fell in refreshing showers from November to April, but it did not rain steadily. There were only two seasons in Palestine, summer and winter, the dry and rainy seasons. In January the flowers began to bloom, and by the end of April the whole land was one vast flower garden.
 \vs p124 1:11 \pc In May of this year, on his uncle’s farm, Jesus for the first time helped with the harvest of the grain. Before he was 13, he had managed to find out something about practically everything that men and women worked at around Nazareth except metal working, and he spent several months in a smith’s shop when older, after the death of his father.
 \vs p124 1:12 When work and caravan travel were slack, Jesus made many trips with his father on pleasure or business to near\hyp{}by Cana, Endor, and Nain. Even as a lad he frequently visited Sepphoris, only a little over 4.9\,km from Nazareth to the north\hyp{}west, and from 4\,B.C. to about A.D.\,25 the capital of Galilee and one of the residences of Herod Antipas.
