--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -4,7 +4,7 @@
 \usection{1.\bibnobreakspace Physical Aspects of Jerusem}
 \vs p046 1:1 Jerusem is divided into 1,000 latitudinal sectors and 10,000 longitudinal zones. The sphere has 7 major capitals and 70 minor administrative centres. The 7 sectional capitals are concerned with diverse activities, and the System Sovereign is present in each at least once a year.
 \vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km. The standard weight, the “gradant,” is built up through the decimal system from the mature ultimaton and represents almost exactly 283 grams of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds, that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
-\vs p046 1:3 \pc The energy of Jerusem is superbly controlled and circulates about the sphere in the zone channels, which are directly fed from the energy charges of space and expertly administered by the Master Physical Controllers. The natural resistance to the passage of these energies through the physical channels of conduction yields the heat required for the production of the equable temperature of Jerusem. The full\hyp{}light temperature is maintained at about 21°\,C, while during the period of light recession it falls to a little lower than 10°\,C.
+\vs p046 1:3 \pc The energy of Jerusem is superbly controlled and circulates about the sphere in the zone channels, which are directly fed from the energy charges of space and expertly administered by the Master Physical Controllers. The natural resistance to the passage of these energies through the physical channels of conduction yields the heat required for the production of the equable temperature of Jerusem. The full\hyp{}light temperature is maintained at about 21\,°C, while during the period of light recession it falls to a little lower than 10\,°C.
 \vs p046 1:4 \pc The lighting system of Jerusem should not be so difficult for you to comprehend. There are no days and nights, no seasons of heat and cold. The power transformers maintain 100,000 centres from which rarefied energies are projected upward through the planetary atmosphere, undergoing certain changes, until they reach the electric air\hyp{}ceiling of the sphere; and then these energies are reflected back and down as a gentle, sifting, and even light of about the intensity of Urantia sunlight when the sun is shining overhead at 10:00.
 \vs p046 1:5 Under such conditions of lighting, the light rays do not seem to come from one place; they just sift out of the sky, emanating equally from all space directions. This light is very similar to natural sunlight except that it contains very much less heat. Thus it will be recognized that such headquarters worlds are not luminous in space; if Jerusem were very near Urantia, it would not be visible.
 \vs p046 1:6 The gases which reflect this light\hyp{}energy from the Jerusem upper ionosphere back to the ground are very similar to those in the Urantia upper air belts which are concerned with the auroral phenomena of your so\hyp{}called northern lights, although these are produced by different causes. On Urantia it is this same gas shield which prevents the escape of the terrestrial broadcast waves, reflecting them earthward when they strike this gas belt in their direct outward flight. In this way broadcasts are held near the surface as they journey through the air around your world.
