Get rid of \listoffigures as it disturbs the page headings

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -12,7 +12,8 @@
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
-\iftotalfigures\listoffigures\fi\newpage
+%\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
+\newpage
 \include{tex/intro}
 \include{tex/p000}
 \include{tex/p001}
