Use number 10 instead of "ten" at 42:9.2

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -112,7 +112,7 @@
 \vs p042 8:7 These mesotrons are found abundantly in the space rays which so incessantly impinge upon your planet.
 \usection{9.\bibnobreakspace Natural Philosophy}
 \vs p042 9:1 Religion is not alone dogmatic; natural philosophy equally tends to dogmatize. When a renowned religious teacher reasoned that the number 7 was fundamental to nature because there are 7 openings in the human head, if he had known more of chemistry, he might have advocated such a belief founded on a true phenomenon of the physical world. There is in all the physical universes of time and space, notwithstanding the universal manifestation of the decimal constitution of energy, the ever\hyp{}present reminder of the reality of the sevenfold electronic organization of prematter.
-\vs p042 9:2 The number 7 is basic to the central universe and the spiritual system of inherent transmissions of character, but the number ten, the decimal system, is inherent in energy, matter, and the material creation. Nevertheless the atomic world does display a certain periodic characterization which recurs in groups of 7 --- a birthmark carried by this material world indicative of its far\hyp{}distant spiritual origin.
+\vs p042 9:2 The number 7 is basic to the central universe and the spiritual system of inherent transmissions of character, but the number 10, the decimal system, is inherent in energy, matter, and the material creation. Nevertheless the atomic world does display a certain periodic characterization which recurs in groups of 7 --- a birthmark carried by this material world indicative of its far\hyp{}distant spiritual origin.
 \vs p042 9:3 This sevenfold persistence of creative constitution is exhibited in the chemical domains as a recurrence of similar physical and chemical properties in segregated periods of 7 when the basic elements are arranged in the order of their atomic weights. When the Urantia chemical elements are thus arranged in a row, any given quality or property tends to recur by sevens. This periodic change by sevens recurs diminishingly and with variations throughout the entire chemical table, being most markedly observable in the earlier or lighter atomic groupings. Starting from any one element, after noting some one property, such a quality will change for six consecutive elements, but on reaching the eighth, it tends to reappear, that is, the eighth chemically active element resembles the first, the ninth the second, and so on. Such a fact of the physical world unmistakably points to the sevenfold constitution of ancestral energy and is indicative of the fundamental reality of the sevenfold diversity of the creations of time and space. Man should also note that there are 7 colours in the natural spectrum.
 \vs p042 9:4 But not all the suppositions of natural philosophy are valid; for example, the hypothetical ether, which represents an ingenious attempt of man to unify his ignorance of space phenomena. The philosophy of the universe cannot be predicated on the observations of so\hyp{}called science. If such a metamorphosis could not be seen, a scientist would be inclined to deny the possibility of developing a butterfly out of a caterpillar.
 \vs p042 9:5 Physical stability associated with biologic elasticity is present in nature only because of the well\hyp{}nigh infinite wisdom possessed by the Master Architects of creation. Nothing less than transcendental wisdom could ever design units of matter which are at the same time so stable and so efficiently flexible.
