Italicize Acknowledgement in the Foreword

--- a/tex/urantia-core.tex
+++ b/tex/urantia-core.tex
@@ -107,7 +107,7 @@
     \stepcounter{secnum}%
     \par\raggedbottom\addtolength{\topskip}{0pt plus 20pt}\vspace*{1ex}%
     \ifx\secname\ackn
-       {\centering\headerackfont\parbox{\columnwidth}{\tunemarkup{pgluluhb}{\itshape}\tunemarkup{pghanlin}{\itshape}\tunemarkup{pgnexus7}{\itshape}\tunemarkup{pgkindledx}{\itshape}\centering\uppercase{#1}}\\*[3pt]}%
+       {\centering\headerackfont\parbox{\columnwidth}{\itshape\centering\uppercase{#1}}\\*[3pt]}%
     \else
        {\centering\headerfont\addfontfeature{WordSpace=2.4}\parbox{\columnwidth}{\centering\uppercase{#1}}\\*[3pt]}%
     \fi
