Make it possible to disable various features

--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -92,11 +92,13 @@
 \vs p029 5:1 The force organizers are resident on Paradise, but they function throughout the master universe, more particularly in the domains of unorganized space. These extraordinary beings are neither creators nor creatures, and they comprise two grand divisions of service:
 \vs p029 5:2 \ublistelem{1.}\bibnobreakspace Primary Eventuated Master Force Organizers.
 \vs p029 5:3 \ublistelem{2.}\bibnobreakspace Associate Transcendental Master Force Organizers.
+\tunemarkup{pictures}{%
 \begin{figure}[H]
 \centering
 \includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.32}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/associate_transcendental_master_force_organizer_700x525h.jpg}
 \caption{Associate Transcendental Master Force Organizer by Troy~R.~Bishop}
 \end{figure}
+}
 \vs p029 5:4 \pc These two mighty orders of primordial\hyp{}force manipulators work exclusively under the supervision of the Architects of the Master Universe, and at the present time they do not function extensively within the boundaries of the grand universe.
 \vs p029 5:5 \pc Primary Master Force Organizers are the manipulators of the primordial or basic space\hyp{}forces of the Unqualified Absolute; they are nebulae creators. They are the living instigators of the energy cyclones of space and the early organizers and directionizers of these gigantic manifestations. These force organizers transmute \bibemph{primordial force} (pre\hyp{}energy not responsive to direct Paradise gravity) into primary or \bibemph{puissant energy,} energy transmuting from the exclusive grasp of the Unqualified Absolute to the gravity grasp of the Isle of Paradise. They are thereupon succeeded by the associate force organizers, who continue the process of energy transmutation from the primary through the secondary or \bibemph{gravity\hyp{}energy} stage.
 \vs p029 5:6 Upon the completion of the plans for the creation of a local universe, signalized by the arrival of a Creator Son, the Associate Master Force Organizers give way to the orders of power directors acting in the superuniverse of astronomic jurisdiction. But in the absence of such plans the associate force organizers continue on indefinitely in charge of these material creations, even as they now operate in outer space.
