--- a/tex/p047.tex
+++ b/tex/p047.tex
@@ -7,11 +7,13 @@
 \usection{1.\bibnobreakspace The Finaliters’ World}
 \vs p047 1:1 Although only finaliters and certain groups of salvaged children and their caretakers are resident on transitional world number one, provision is made for the entertainment of all classes of spirit beings, transition mortals, and student visitors. The spornagia, who function on all of these worlds, are hospitable hosts to all beings whom they can recognize. They have a vague feeling concerning the finaliters but cannot visualize them. They must regard them much as you do the angels in your present physical state.
 \vs p047 1:2 Though the finaliter world is a sphere of exquisite physical beauty and extraordinary morontia embellishment, the great spirit abode located at the centre of activities, the temple of the finaliters, is not visible to the unaided material or early morontia vision. But the energy transformers are able to visualize many of these realities to ascending mortals, and from time to time they do thus function, as on the occasions of the class assemblies of the mansion world students on this cultural sphere.
+\tunemarkup{pictures}{%
 \begin{figure}[H]
 \centering
 \includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/temple_of_the_finaliters_700x525h.jpg}
 \caption{Temple of the Finaliters by Troy~R.~Bishop}
 \end{figure}
+}
 \vs p047 1:3 All through the mansion world experience you are in a way spiritually aware of the presence of your glorified brethren of Paradise attainment, but it is very refreshing, now and then, actually to perceive them as they function in their headquarters abodes. You will not spontaneously visualize finaliters until you acquire true spirit vision.
 \vs p047 1:4 \pc On the first mansion world all survivors must pass the requirements of the parental commission from their native planets. The present Urantia commission consists of 12 parental couples, recently arrived, who have had mortal experience in rearing three or more children to the pubescent age. Service on this commission is rotational and is for only 10 years as a rule. All who fail to satisfy these commissioners as to their parental experience must further qualify by service in the homes of the Material Sons on Jerusem or in part in the probationary nursery on the finaliters’ world.
 \vs p047 1:5 But irrespective of parental experience, mansion world parents who have growing children in the probation nursery are given every opportunity to collaborate with the morontia custodians of such children regarding their instruction and training. These parents are permitted to journey there for visits as often as four times a year. And it is one of the most touchingly beautiful scenes of all the ascending career to observe the mansion world parents embrace their material offspring on the occasions of their periodic pilgrimages to the finaliter world. While one or both parents may leave a mansion world ahead of the child, they are quite often contemporary for a season.
@@ -46,11 +48,13 @@
 \vs p047 4:5 Your Adjuster memory remains fully intact as you ascend the morontia life. Those mental associations that were purely animalistic and wholly material naturally perished with the physical brain, but everything in your mental life which was worth while, and which had survival value, was counterparted by the Adjuster and is retained as a part of personal memory all the way through the ascendant career. You will be conscious of all your worth\hyp{}while experiences as you advance from one mansion world to another and from one section of the universe to another --- even to Paradise.
 \vs p047 4:6 Though you have morontia bodies, you continue, through all seven of these worlds, to eat, drink, and rest. You partake of the morontia order of food, a kingdom of living energy unknown on the material worlds. Both food and water are fully utilized in the morontia body; there is no residual waste. Pause to consider: Mansonia number one is a very material sphere, presenting the early beginnings of the morontia regime. You are still a near human and not far removed from the limited viewpoints of mortal life, but each world discloses definite progress. From sphere to sphere you grow less material, more intellectual, and slightly more spiritual. The spiritual progress is greatest on the last three of these seven progressive worlds.
 \vs p047 4:7 Biological deficiencies were largely made up on the first mansion world. There defects in planetary experiences pertaining to sex life, family association, and parental function were either corrected or were projected for future rectification among the Material Son families on Jerusem.
+\tunemarkup{pictures}{%
 \begin{figure}[H]
 \centering
 \includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/mansonia_2_temple_of_inner_healing_700x525h.jpg}
 \caption{Mansonia 2 Temple of Inner Healing by Troy~R.~Bishop}
 \end{figure}
+}
 \vs p047 4:8 Mansonia number two more specifically provides for the removal of all phases of intellectual conflict and for the cure of all varieties of mental disharmony. The effort to master the significance of morontia mota, begun on the first mansion world, is here more earnestly continued. The development on mansonia number two compares with the intellectual status of the post\hyp{}Magisterial Son culture of the ideal evolutionary worlds.
 \usection{5.\bibnobreakspace The Third Mansion World}
 \vs p047 5:1 Mansonia the third is the headquarters of the Mansion World Teachers. Though they function on all seven of the mansion spheres, they maintain their group headquarters at the centre of the school circles of world number three. There are millions of these instructors on the mansion and higher morontia worlds. These advanced and glorified cherubim serve as morontia teachers all the way up from the mansion worlds to the last sphere of local universe ascendant training. They will be among the last to bid you an affectionate adieu when the farewell time draws near, the time when you bid good\hyp{}bye --- at least for a few ages --- to the universe of your origin, when you enseraphim for transit to the receiving worlds of the minor sector of the superuniverse.
