--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -14,7 +14,7 @@
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
 \newpage
-\include{tex/intro}
+\tunemarkup{introinclude}{\include{tex/intro}}
 \include{tex/p000}
 \include{tex/p001}
 \include{tex/p002}
