Make starred separators more in line with the 1955 First Edition

--- a/tex/urantia-core.tex
+++ b/tex/urantia-core.tex
@@ -119,6 +119,7 @@
 
 \def\bibnobreakspace{\kern5pt\relax}
 \newcommand{\separatorline}{\begin{center}*\ \ *\ \ *\ \ *\ \ *\end{center}}
+\newcommand{\separatorshort}{\begin{center}*\ *\ *\end{center}}
 
 \newcommand{\bibtextul}[1]{\uline{#1}}
 \newcommand{\bibexpl}[1]{{\explfont #1}}
