Fix a couple of comments and disable footnotes by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -24,15 +24,15 @@
 %\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-\tunemarkuptag{nofnt}
+%\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
 %\tunemarkuptag{fancylettrine}
 
-% comment out to disable Introduction
+% comment out to enable Introduction
 %\tunemarkuptag{introinclude}
 
-% comment out to disable fancy page decorations
+% comment out to enable fancy page decorations
 \tunemarkuptag{nofancydecor}
 
 \setdefaultlanguage{english}
