--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -24,7 +24,7 @@
 %\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-%\tunemarkuptag{nofnt}
+\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
 %\tunemarkuptag{fancylettrine}
