Get rid of "Numero" sign after Paper --- this is not Russian

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -271,7 +271,7 @@
       \ifnum #1=120
         \partiv
       \fi
-      \headerfont\bibpaperfont\papertxt\ №\,#1\\[3pt]
+      \headerfont\bibpaperfont\papertxt\ #1\\[3pt]
       \addfontfeatures{WordSpace=2.0}\bibpapertitlefont\MakeUppercase{#2}\\
       \vspace*{-0.5ex}\input{tex/p\thepaper-sections.tex}\vspace*{-1ex}%
    \end{center}%
