--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -77,9 +77,8 @@
 }
 
 % for TOC entries horizontal spacing
-\newcommand{\now}{0.04\linewidth}
 \newcommand{\numw}{0.08\linewidth}
-\newcommand{\txtw}{0.77\linewidth}
+\newcommand{\txtw}{0.81\linewidth}
 
 \tunemarkup{pghanlin}{%
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
@@ -117,9 +116,8 @@
 }
 
 \tunemarkup{pgkoboaurahd}{%
-\renewcommand{\now}{0.04\linewidth}
 \renewcommand{\numw}{0.07\linewidth}
-\renewcommand{\txtw}{0.81\linewidth}
+\renewcommand{\txtw}{0.85\linewidth}
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
@@ -140,7 +138,7 @@
 \newcommand{\bibbookend}{\fontsize{16.4}{18.5}\selectfont}
 \newcommand{\urantiamainfontsize}{16.4/18.5}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{15}{17}\bfseries}
-\renewcommand{\bibtocfont}{\fontsize{11.6}{15}\selectfont}
+\renewcommand{\bibtocfont}{\fontsize{12.0}{15}\selectfont}
 \renewcommand{\author}[1]{{\fontsize{13}{9}\bfseries\itshape\begin{center}#1\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}}
 \newcommand{\bibsectitlefont}{\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
@@ -285,7 +283,7 @@
 \vspace*{-0.5ex}\input{tex/p\thepaper-sections.tex}\vspace*{-2ex}%
 \end{center}%
 \ubookdescr{p0}{
-   toc={\makebox[\now][l]{№}\makebox[\numw][r]{0.\,}\makebox[\txtw][l]{\forewordtoc\bibdf}},
+   toc={\makebox[\numw][r]{0.\,}\makebox[\txtw][l]{\forewordtoc\bibdf}},
    bookmark={\forewordbmk},
    header={\forewordhdr},
    abbr={p0}
@@ -303,7 +301,7 @@
 \setcounter{secnum}{0}%
 \bibpaperdisplay{#1}{#2}%
  \ubookdescr{p#1}{
-   toc={\makebox[\now][l]{№}\makebox[\numw][r]{#1.\,}\makebox[\txtw][l]{#2\bibdf}},
+   toc={\makebox[\numw][r]{#1.\,}\makebox[\txtw][l]{#2\bibdf}},
    bookmark={#1. #2},
    header={#2},
    abbr={p#1}
