Get rid of my name from the title page and make it a bit more plain

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -39,41 +39,30 @@ THE BRITISH STUDY EDITION\\
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
-THE URANTIA BOOK\\
-\tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
-{\itshape OR}\\[1ex]
-\tunemarkup{pgkindledx}{\fontsize{15}{32}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{11.2}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{13}{20}\selectfont}
-THE FIFTH EPOCHAL REVELATION\\
+``THE URANTIA BOOK''\\
 }%
 {%
-\vspace*{\stretch{0.2}}
+\vspace*{\stretch{0.1}}
 \tunemarkup{pghanlin}{\fontsize{10}{13}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \itshape
-The Standard Reference Text in British English,\\
+The Standard Reference Text in British English\tunemarkuptwo{nofnt}{}{%
+,\\
 with Metric Measures, Textual Variants,\\
 Study Notes \&\ \totalfigures\ Illustrations\\
+}
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\}
-\tunemarkup{pgkindledx}{\fontsize{14}{20}\selectfont}
-\tunemarkup{pghanlin}{\fontsize{9}{18}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{9}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{13}{20}\selectfont}
-Edited by Tigran Aivazian\\
 }%
 \vspace*{\stretch{0.6}}
+\tunemarkuptwo{nofancydecor}{}{%
 \titlesepbig\\
+}
 \vspace*{\stretch{0.1}}
 \end{center}
 
-\titleframe
+\tunemarkuptwo{nofancydecor}{}{\titleframe}
 
 \newpage
 \makeatletter
@@ -81,13 +70,6 @@ Edited by Tigran Aivazian\\
 \makeatother
 
 \begin{center}
-%{
-%\vspace*{\stretch{0.1}}
-%\fontspec[Mapping=tex-text]{Coventry}\fontsize{24}{30}\selectfont
-%%\fontspec[Mapping=tex-text]{URW Chancery L}\fontsize{14}{20}\selectfont
-%\setlength{\fboxsep}{10pt}
-%\doublebox{\parbox{10.8cm}{\centering To John F. Smith\\Put your gift message here.\\}}
-%}
 \vspace*{\stretch{0.3}}
 \tunemarkup{pghanlin}{\begin{center}\parbox{7cm}{\normalsize\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}}
 \tunemarkup{pgnexus7}{\begin{center}\parbox{7cm}{\normalsize\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}}
@@ -99,16 +81,15 @@ Edited by Tigran Aivazian\\
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this edition.\\The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
 Cover design by Gary Tonge, www.vision-afar.com.\\
-Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries Tigran~Aivazian~<tigran@bibles.org.uk>\makeatother}\\[1pt]
-The latest version of this book can be downloaded from:\\[1ex]
-\shadowbox{\upshape\bfseries http://www.bibles.org.uk}\\
-The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
+The latest version of this book can be downloaded from:\\
+{\upshape\bfseries http://www.bibles.org.uk}\\
+%The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
 The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
-The asterisk * indicates a study note other than a textual variant.\\[5pt]
+%The asterisk * indicates a study note other than a textual variant.\\[5pt]
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
 Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\bfseries Version: \mytoday{}\\
 }
 \end{center}
 
-\titleframe
+\tunemarkuptwo{nofancydecor}{}{\titleframe}
