--- a/ubook.sty
+++ b/ubook.sty
@@ -25,7 +25,7 @@
 \protected\def\hyph#1#2#3{\discretionary{#1\char\hyphenchar\font}{#2}{#3}}
 
 \RequirePackage[perpage]{footmisc}
-\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,fancybox,xcolor,pagecolor,afterpage,float}
+\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float}
 \RequirePackage[figure]{totalcount}
 
 \newcommand{\bibdropcapscolor}{black}
