Make cover image optional

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,11 +1,11 @@
-\makeatletter\bib@raise@anchor{\bibpdfbookmark[0]{Cover Image}{Cov}}\makeatother
-
+\tunemarkup{coverimage}{%
 \newpagecolor{ubpagecolor}\afterpage{\restorepagecolor}
 \tunemarkup{pghanlin}{\begin{center}\includegraphics[scale=1.64]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \tunemarkup{pgkoboaurahd}{\begin{center}\includegraphics[scale=1.89]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \tunemarkup{pgnexus7}{\begin{center}\includegraphics[scale=1.71]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \tunemarkup{pgkindledx}{\begin{center}\includegraphics[scale=2.7]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
 \newpage
+}
 
 \makeatletter
 \bib@raise@anchor{\bibpdfbookmark[0]{Title Page}{Ttl}}%
