--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -36,6 +36,9 @@
 % comment out to enable fancy page decorations
 \tunemarkuptag{nofancydecor}
 
+% comment out to disable cover image
+%\tunemarkuptag{coverimage}
+
 \setdefaultlanguage{english}
 
 \tunemarkup{garamond}{%
