Use a number instead of word

--- a/tex/p052.tex
+++ b/tex/p052.tex
@@ -77,7 +77,7 @@
 \vs p052 6:8 \pc If you could be transplanted from your backward and confused world to some normal planet now in the postbestowal Son age, you would think you had been translated to the heaven of your traditions. You would hardly believe that you were observing the normal evolutionary workings of a mortal sphere of human habitation. These worlds are in the spiritual circuits of their realm, and they enjoy all the advantages of the universe broadcasts and the reflectivity services of the superuniverse.
 \usection{7.\bibnobreakspace Post\hyp{}Teacher Son Man}
 \vs p052 7:1 The Sons of the next order to arrive on the average evolutionary world are the Trinity Teacher Sons, the divine Sons of the Paradise Trinity. Again we find Urantia out of step with its sister spheres in that your Jesus has promised to return. That promise he will certainly fulfil, but no one knows whether his second coming will precede or follow the appearances of Magisterial or Teacher Sons on Urantia.
-\vs p052 7:2 The Teacher Sons come in groups to the spiritualizing worlds. A planetary Teacher Son is assisted and supported by 70 primary Sons, 12 secondary Sons, and three of the highest and most experienced of the supreme order of Daynals. This corps will remain for some time on the world, long enough to effect the transition from the evolutionary ages to the era of light and life --- not less than 1,000 years of planetary time and often considerably longer. This mission is a Trinity contribution to the antecedent efforts of all the divine personalities who have ministered to an inhabited world.
+\vs p052 7:2 The Teacher Sons come in groups to the spiritualizing worlds. A planetary Teacher Son is assisted and supported by 70 primary Sons, 12 secondary Sons, and 3 of the highest and most experienced of the supreme order of Daynals. This corps will remain for some time on the world, long enough to effect the transition from the evolutionary ages to the era of light and life --- not less than 1,000 years of planetary time and often considerably longer. This mission is a Trinity contribution to the antecedent efforts of all the divine personalities who have ministered to an inhabited world.
 \vs p052 7:3 \pc The revelation of truth is now extended to the central universe and to Paradise. The races are becoming highly spiritual. A great people has evolved and a great age is approaching. The educational, economic, and administrative systems of the planet are undergoing radical transformations. New values and relationships are being established. The kingdom of heaven is appearing on earth, and the glory of God is being shed abroad in the world.
 \vs p052 7:4 This is the dispensation when many mortals are translated from among the living. As the era of Trinity Teacher Sons progresses, the spiritual allegiance of the mortals of time becomes more and more universal. Natural death becomes less frequent as the Adjusters increasingly fuse with their subjects during the lifetime in the flesh. The planet eventually is classed as of the primary modified order of mortal ascension.
 \vs p052 7:5 \pc Life during this era is pleasant and profitable. Degeneracy and the antisocial end products of the long evolutionary struggle have been virtually obliterated. The length of life approaches 500 Urantia years, and the reproductive rate of racial increase is intelligently controlled. An entirely new order of society has arrived. There are still great differences among mortals, but the state of society more nearly approaches the ideals of social brotherhood and spiritual equality. Representative government is vanishing, and the world is passing under the rule of individual self\hyp{}control. The function of government is chiefly directed to collective tasks of social administration and economic co\hyp{}ordination. The golden age is coming on apace; the temporal goal of the long and intense planetary evolutionary struggle is in sight. The reward of the ages is soon to be realized; the wisdom of the Gods is about to be manifested.
